asm_tests/other_testfiles/invalid_files/error6.s
.name "MORO"
.comment "MORJESTA!"


kissa:
st :kissa, r1
